--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="sr">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Catch of the Day</title>
+  <title>Klopa kao kod kuće</title>
 </head>
 
 <body>
   <input type="checkbox" id="fold">
-  <label for="fold">Fold</label>
+  <label for="fold">Iskrivi</label>
 
   <div id="main">
     <!-- This is where our React app will go -->
